--- a/mogo-apps-ios/add-withdraw-saving/addWithdrawStoryboard.storyboard
+++ b/mogo-apps-ios/add-withdraw-saving/addWithdrawStoryboard.storyboard
@@ -16,21 +16,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="abe-EO-IXk">
-                                <rect key="frame" x="0.0" y="33" width="390" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemGray6Color"/>
-                                <items>
-                                    <navigationItem id="uRR-cY-Nzd">
-                                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="XYU-CV-ckx">
-                                            <color key="tintColor" red="0.093237645920000001" green="0.47508078809999998" blue="0.43137091399999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                        </barButtonItem>
-                                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="y1Z-jT-yGL">
-                                            <color key="tintColor" red="0.093237645920000001" green="0.47508078809999998" blue="0.43137091399999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                        </barButtonItem>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8yg-UV-a0W">
                                 <rect key="frame" x="0.0" y="142" width="390" height="44"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -39,7 +24,7 @@
                                         <rect key="frame" x="134" y="5" width="248" height="34"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                         <connections>
                                             <outlet property="delegate" destination="4Zn-sW-yDF" id="PRU-WT-tSe"/>
                                         </connections>
@@ -60,8 +45,8 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <accessibility key="accessibilityConfiguration" identifier="amountCell"/>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="THIS MONTH'S SAVING" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FJq-lT-Hsr">
-                                <rect key="frame" x="16" y="118" width="145" height="16"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="THIS PERIOD SAVING" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FJq-lT-Hsr">
+                                <rect key="frame" x="16" y="118" width="131" height="16"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                                 <color key="textColor" systemColor="secondaryLabelColor"/>
@@ -96,18 +81,22 @@
                         <viewLayoutGuide key="safeArea" id="iB9-VO-J6B"/>
                         <color key="backgroundColor" systemColor="systemGray6Color"/>
                     </view>
-                    <navigationItem key="navigationItem" id="eIL-o8-Fp8"/>
+                    <navigationItem key="navigationItem" id="eIL-o8-Fp8">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="cpd-Bw-5xj">
+                            <color key="tintColor" red="0.093237645920000001" green="0.47508078809999998" blue="0.43137091399999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="a3M-xe-wl6">
+                            <color key="tintColor" red="0.093237645920000001" green="0.47508078809999998" blue="0.43137091399999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
-                        <outlet property="addSavingTitle" destination="uRR-cY-Nzd" id="vdG-7D-P0Q"/>
                         <outlet property="amountCellView" destination="8yg-UV-a0W" id="ilA-Mm-Z6G"/>
                         <outlet property="amountField" destination="ksP-Hj-0C4" id="rcm-rK-ShV"/>
                         <outlet property="amountLabel" destination="5Cm-a6-FGO" id="Yyc-YP-Flj"/>
-                        <outlet property="cancelButton" destination="XYU-CV-ckx" id="DnS-wE-op9"/>
                         <outlet property="dateCellView" destination="6Aj-HJ-6IK" id="R7C-E2-wmb"/>
                         <outlet property="dateField" destination="Erh-hn-QRU" id="mo5-eY-fJL"/>
                         <outlet property="dateLabel" destination="e5o-pg-xMu" id="suk-DA-qWf"/>
                         <outlet property="monthSavingTitle" destination="FJq-lT-Hsr" id="7DL-sW-Oex"/>
-                        <outlet property="saveButton" destination="y1Z-jT-yGL" id="TM4-0p-2TV"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dE1-M4-rQS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
